# mediumscrapper

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/mediumscrapper/: __init__.py  mediumscrapper.py
tests/: test_mediumscrapper.py
